изменил интерфейс, добавил новое условие, работа скилла по таймеру, для указания времени сделал всплывающее окно. добавил возможность менять тему интерфейса со светлого на темную, пока не реализовал.